# LibreChat

./: .gitignore  librechat.yaml
api/server/controllers/agents/: client.js
api/server/middleware/: requireJwtAuth.js
client/src/components/Chat/Messages/Content/: ToolCallInfo.tsx
client/src/hooks/: AuthContext.tsx
client/src/utils/: dataUtils.tsx  displayUtils.tsx  graphqlUtils.tsx  pythonUtils.tsx  queryUtils.tsx
python-data-viz-mcp/: README.md  pyproject.toml
python-data-viz-mcp/src/python_data_viz_mcp/: __init__.py  server.py
python-data-viz-mcp/tests/: __init__.py
